cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_17.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:39: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:39:13: Write of unused value
37.           }
38.           if (l != -8) {
39.               c2ln(in, tin0, tin1, l + 8);
                  ^
40.               tin0 ^= tout0;
41.               tin1 ^= tout1;
